	* codesign Mac OS X - add time stamp and identifier to dmg
	
Device specific changes/fixes
	* HoTTAdapter* - remove dependency to property using North/South hemisphere, as well as East/West of meridian
	* HoTTAdapter* - rename variable GPS values in XML to propagate to history analysis
	* HoTTAdapter* - correct offset MSL altitude if contained in GPS in *.log

Version 3.4.8 - 24 Apr 2021
Generic changes/fixes
	* enable record based scale sync property updates (outside device XML)
	
Device specific changes/fixes
	* HoTTAdapter* - fix scale synchronization, formatting, unit and factor to support different GPS data source
	* HoTTAdapter* - change SM GPS-Logger names from gyro to acceleration
	* HoTTAdapter* - change GPS time and year to more readable format
	* HoTTAdapter2 - fix parsing altitude,climb values while EAM is configured as primary
	* HoTTAdapter2 - fix missing GAM, EAM, ESC parsing while no known GPS is connected
	* HoTTAdapter2 - enable simple GPS type detection while reading through 19200 Baud protocol
	* Triangoli - add initial support

Version 3.4.7 - 27 Mar 2021
Generic changes/fixes
	* update copyright 2021
	* update dialog sizes to support uneven Windows scaling 
	* fix error while editing FileComment tab while focus lost
	* fix error in setting returning initial wrong decimal separator
	* make tolerant missing symbols in OSD (variable measurement size written by Android app) 
	* fix scroll problem file comment window record comment table
	
Device specific changes/fixes
	* JetiAdapter - fix check GPS data to enable Google Earth export
	* IGCAdapter - fix support configuring speed or others in KML/KMZ export
	* HoTTAdapter* - fix unit of GPS vibration
	* HoTTAdapter* - detecting GPS type to sort and re-name measurements
	* HoTTAdapter* - fix missing ESC while importing *.log
	* GraupnerUDP* - fix update step charge tabulator
	* GraupnerUDP* - fix update step charge min capacity/current
	* IGCAdapter - fix loading older OSD file