@@ -4429,7 +4429,7 @@
                 <symbol>v</symbol>
                 <unit>km/h</unit>
                 <active>true</active>
-                <statistics min="true" max="true" avg="true" sigma="false"/>
+                <statistics min="true" max="true" avg="true" sigma="false" triggerRefOrdinal="83" comment="Werte bezogen auf Stromtriggerbereich"/>
             </Measurement>
             <Measurement>
                 <name>distance_start</name>
